--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typechain": "^8.3.2"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.1.8",
     "@openzeppelin/contracts-upgradeable": "^5.4.0",
     "@openzeppelin/hardhat-upgrades": "^3.9.1"
   }
